--- a/index.Rmd
+++ b/index.Rmd
@@ -259,7 +259,6 @@ There are lots of additional information on the Syllabus delivered through the w
 .large[
 - What is a model?
 - Why do we model transportation phenomena?
-- Is it easy to model transportation?
 - Where is transportation modelling heading?
 - And this course?
 ]
@@ -343,6 +342,7 @@ Modelling is an important part of most decision-making processes with no real-wo
 
 Get the best understanding that we can of the current situation and how this may, with or without our interference, evolve in the future. 
 
+Representation and analysis of the interactions among **supply**, **demand** and **activity systems**. 
 
 Models can be descriptive, but more often there is the explicit aim of seeking the key links between causes and effects in transport decision-making either by the providers of transport services or by the users.
 
@@ -370,44 +370,6 @@ Demand models concern passengers and freight and depend on the location and inte
 
 The activities system is impacted by the level of service attributes and the patterns of spatial and social interactions will impact the decisions regarding the supply of transport. 
 
-Therefore, we model transport to understand the attributes that generate and materialize the human interactions. **Transport is a derived demand**. 
-
----
-
-
-## Is it easy to model transportation?
-
-<hr></hr>
-
-.large[
-.pull-left[
-
-- capacity constraints
-- variation across the time dimension
-- dynamic and pseudo-dynamic assignment - queing
-
-]
-
-
-.pull-right[
-- availability of data
-- complexity
-- behavioural - derived demand
-- trip chaining
-- multiple consumer classes
-]
-]
-
-???
-
-Transport modelling has been evolving and different challenges emerge:
-- we need to include capacity constraints and variation across the time dimension into models to represent the actual system with focus on the integration on the urban system. 
-
-- More sofisticated approaches are being explored considering space-time changes, such as dynamic and pseudo-dynamic assignment - queing
-
-- Transportation modelling depends on data and there should be a concern on the trade-off between complexity and representation/communication ability.
-
-- Behavioural challenges that concern peoples' choices have araisen. 
 
 ---
 
@@ -418,8 +380,8 @@ Transport modelling has been evolving and different challenges emerge:
 - **Balances complexity** and **decision support/communication ability**.  
 - Is as **disaggregated** as possible, limited to data and communicability.   
 - **Isolates key relationships**, not to replicate the entire structure.   
-- Contains many of the key features of the complete structure, but is **simplified** to aid analysis.   
-- Focus on the **key relationships** and explores the available data   
+- Contains many of the key features of the complete structure, but is **simplified** to aid analysis.    
+- Includes **capacity constraints**, variation across the **time** dimension    
 - Is concerned with **causal effects**.   
 - Focus on **policy-making** for **different societal groups**   
 ]
@@ -432,7 +394,7 @@ Transport modelling has been evolving and different challenges emerge:
 .large[
 - Is **not** based on **“political modelling"**, but takes into account diversity    
 - Is **flexible** between **forecasting** and **backcasting** approaches.   
-- Its framework concerns **transport as derived demand**.    
+- Its framework concerns **transport as derived demand** and includes **behavioral dimensions**.  
 - Aims at **managing the city** and **not** only **accommodating demand**. Make the **best use of existing capacity**.   
 - Takes into account **social, environmental and economic pressures** and **changes** in **space** and **time**.   
 - Concerns **effective assessments**, usually within a broad cost–benefit framework   
